syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartcity.auth_service.grpc";
option java_outer_classname = "AuthProto";

package auth_service;

// Service to handle authentication
service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
}

// Request for registering a new user
message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

// Request for logging in
message LoginRequest {
  string username = 1;
  string password = 2;
}

// Token response
message AuthResponse {
  string token = 1;
}
